src/global.css
/**
 * General variable and light-mode color scheme.
 */
:root {
    --mobile: 768px;

    --size-xs: 0.75em;
    --size-sm: 0.875em;
    --size-md: 1em;
    --size-lg: 1.125em;
    --size-xl: 1.25em;

    --transition: 0.2s ease-in-out;
    --radius: 0.25rem;

    --ctrl-height: 2.25em;
    --ctrl-padding: 0 1em;

    --primary: #3f51b5;
    --primary-bg: #dfe3f5;
    --on-primary: #fff;

    --secondary: #6e2ab7;
    --secondary-bg: #e3d9f5;
    --on-secondary: #fff;

    --error: #f44336;
    --error-bg: #fae2e7;
    --on-error: #fff;

    --warning: #ff9800;
    --warning-bg: #fcf2e2;
    --on-warning: #fff;

    --success: #4caf50;
    --success-bg: #d0e9d2;
    --on-success: #fff;

    --font: "Roboto", "Helvetica", "Arial", sans-serif;
    --font-alt: "Roboto", "Helvetica", "Arial", sans-serif;
    --font-code: "Fira Code", monospace;

    --border: #8c8e97;
    --bg: #e8e9f0;
    --fg: #fff;
    --pre-bg: #1a1a1a;
    --pre-text: #fff;
    --nav-bg: linear-gradient(45deg, #192b90 0%, #291c6a 100%);
    --nav-text: #fff;
    --nav-highlight: rgba(255, 255, 255, 0.05);
    --text: #000;
    --outline-color: hsla(195, 85%, 41%, 0.5);
    --text-muted: #717381;
    --shadow-color: rgba(16, 24, 40, 0.05);
    --highlight: rgba(0, 0, 0, 0.05);
    --dim: rgba(0, 0, 0, 0.125);
    --mark-bg: #fff2ca;
    --mark-color: #543a26;
    --ins-color: var(--s-500);
    --del-color: var(--e-500);
    --blockquote-border-color: #e0e0e0;
    --blockquote-footer-color: #757575;
    --progress-background-color: var(--primary-focus);
    --progress-color: var(--primary);

    --scrollbar-background: transparent;
    --scrollbar-foreground: var(--dim);
    --pre-scrollbar-foreground: rgba(255, 255, 255, 0.1);
    --pre-scrollbar-background: transparent;
}


[data-theme=dark] {
    --bg: #121212;
    --fg: #1f1f1f;
    --nav-bg: #1c1d21;
    --text: #fff;
    --border: #333;
    --highlight: rgba(255, 255, 255, 0.05);
    --scrollbar-foreground: var(--highlight);
    --primary: #4960e5;
    --primary-bg: #1f1f1f;
    --on-primary: #000;
    --secondary: #8833e2;
    --secondary-bg: #1f1f1f;
    --on-secondary: #fff;
    --error: #f44336;
    --error-bg: #1f1f1f;
    --on-error: #000;
    --warning: #ffa722;
    --warning-bg: #1f1f1f;
    --on-warning: #000;
    --success: #4caf50;
    --success-bg: #1f1f1f;
    --on-success: #000;
}

@media screen and (prefers-color-scheme: dark) {
    :root:not([data-theme=light]) {
        --bg: #121212;
        --fg: #1f1f1f;
        --nav-bg: #1c1d21;
        --text: #fff;
        --border: #333;
        --highlight: rgba(255, 255, 255, 0.05);
        --scrollbar-foreground: var(--highlight);
        --primary: #4960e5;
        --primary-bg: #1f1f1f;
        --on-primary: #000;
        --secondary: #8833e2;
        --secondary-bg: #1f1f1f;
        --on-secondary: #fff;
        --error: #f44336;
        --error-bg: #1f1f1f;
        --on-error: #000;
        --warning: #ffa722;
        --warning-bg: #1f1f1f;
        --on-warning: #000;
        --success: #4caf50;
        --success-bg: #1f1f1f;
        --on-success: #000;
    }
}

/* Common reset. */
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
main,
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}

*,
*::before,
*::after {
    box-sizing: border-box;
    background-repeat: no-repeat;
    scrollbar-color: var(--scrollbar-foreground) var(--scrollbar-background);
}

*::-webkit-scrollbar {
    width: 10px;
    height: 10px;
}

*::-webkit-scrollbar-thumb {
    background: var(--scrollbar-foreground);
    border-radius: 1em;
}

*::-webkit-scrollbar-track {
    background: var(--scrollbar-background);
}

input,
textarea {
    -webkit-user-select: text;
    -moz-user-select: text;
    -ms-user-select: text;
    user-select: text;
}

::before,
::after {
    text-decoration: inherit;
    vertical-align: inherit;
}

progress,
[type=checkbox],
[type=radio],
[type=range] {
    accent-color: var(--primary);
}

html {
    font-family: var(--font);
    -webkit-tap-highlight-color: transparent;
    -webkit-text-size-adjust: 100%;
    -moz-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    text-size-adjust: 100%;
    background: var(--bg);
    color: var(--text);
    font-weight: 400;
    -webkit-tap-highlight-color: transparent;
    font-size: 14px;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
    overflow-wrap: break-word;
    cursor: default;
    -moz-tab-size: 4;
    -o-tab-size: 4;
    tab-size: 4;
    scroll-behavior: smooth;
}

@media (min-width: 768px) {
    html {
        font-size: 16px;
    }
}

body {
    width: 100vw;
    overflow-x: hidden;
    overflow-y: auto;
    --webkit-overflow-scrolling: touch;
}

@media (prefers-reduced-motion: reduce) {
    :root {
        --transition: none;
        --overlay-filter: none;
    }

    html {
        scroll-behavior: auto;
    }
}

/* Disable native rendering. */
* {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}

/* Typography styles */

a,
[role=link] {
    color: var(--primary);
    text-decoration: none;
    cursor: pointer;
}

.muted {
    opacity: 0.5;
}

.ellipsis {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    line-height: 1.5;
}
/* ... */

